# Student-Hryvnia-Miner

./: .env  .env.example  .gitignore  .slsa-goreleaser.yml  README.md  RELEASE.md  Taskfile.yml  api.go  app.go  config.go  constants.go  flake.nix  go.mod  go.sum  handlers.go  html.go  index.html  logger.go  main.go  miner.go  package-lock.json  server.go  stats.go  types.go  wails.json  wallet.go  wallets.json
.github/workflows/: go-ossf-slsa3-publish.yml  release.yml
backend/: api.go  config.go  constants.go  miner.go  refactor_plan.md  server_ui.go  stats.go  storage.go  storage_password.go  types.go  wallet.go
backend/SHMiner_RUST/: Cargo.toml  README.md
backend/SHMiner_RUST/.cargo/: config.toml
backend/SHMiner_RUST/include/: shminer.h
backend/SHMiner_RUST/src/: ffi.rs  lib.rs  main.rs  mining.rs
backend/app/: app.go  init.go
backend/app/config/: config.go
backend/assets/: index.html
backend/config/: config.go  config_test.go  constants.go
backend/internal/automation/: automation.go  bot.go
backend/internal/logger/: logger.go  logger_test.go
backend/internal/miner/: miner.go  miner_test.go  mocks_test.go  rust_miner.go
backend/internal/nodeclient/: api.go  api_test.go
backend/types/: types.go
frontend/: index.html  package-lock.json  package.json  package.json.md5  tsconfig.json
frontend/src/: App.svelte  main.ts  stores.ts  style.css
packaging/: nfpm.yaml
packaging/appimage/: Dockerfile  build-appimage.sh
packaging/aur/: .SRCINFO  .gitignore  PKGBUILD  shminer.desktop
packaging/deb/: build-deb.sh
packaging/rpm/: shminer.spec
(+32 files in other folders)
