[package]
name = "shminer"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "shminer-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
env_logger = "0.10"
once_cell = "1.21.4"
hex = "0.4"
itoa = "1.0"
log = "0.4"
num_cpus = "1.16"
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
core_affinity = "0.8"
